--- a/views/formDiv.html
+++ b/views/formDiv.html
@@ -32,7 +32,7 @@
                         <div class="from-input-div-container">
                             <div class="pic-text-input">
                                 <div class="pic">
-                                    <img src="../app/assets/depart (1).png">
+                                    <img src="app/assets/depart (1).png">
                                 </div>
                                 <div class="txt">
                                     :המראה
@@ -47,7 +47,7 @@
                         <div class="from-input-div-container">
                             <div class="pic-text-input">
                                 <div class="pic">
-                                    <img src="../app/assets/arrive (1).png">
+                                    <img src="app/assets/arrive (1).png">
                                 </div>
                                 <div class="txt">
                                     :נחיתה
@@ -63,7 +63,7 @@
                     <div class="select-div-container">
                         <div class="select-text-input">
                             <div class="select-pic">
-                                <img src="../app/assets/depart (1).png">
+                                <img src="app/assets/depart (1).png">
                             </div>
                             <div class="select-txt">
                                 :נוסעים
